Change on swagger.json file
